--- a/config/settings.default.yml
+++ b/config/settings.default.yml
@@ -59,7 +59,7 @@
 #------------------------------------------------------------------------------
 # Default locale is American English.
 #
-:locale: "en-US"
+:locale: "en"
 
 
 # Settings for outgoing email (SMTP)
